fix bug with responsive menu

--- a/app/views/spree/layouts/spree_application.erb
+++ b/app/views/spree/layouts/spree_application.erb
@@ -9,7 +9,7 @@
   </head>
   <body class="<%= body_class %>" id="<%= @body_id || 'default' %>"
     data-hook="body"
-    data-view="<%= backbone_view %>"
+    data-view="<%= backbone_view %>">
 
     <div class="container">
       <%= render 'spree/shared/header' %>
