change youtube video

--- a/app/views/spree/home/index.haml
+++ b/app/views/spree/home/index.haml
@@ -16,7 +16,7 @@
       %h4= t('home.index.item2.content_html')
     .seven.columns
       .border-radius8.embed-container
-        %iframe{ allowfullscreen: "", frameborder: "0", marginheight: "0", marginwidth: "0", mozallowfullscreen: "", scrolling: "no", webkitallowfullscreen: "", src: "//www.youtube.com/embed/U7h_XgZGQGw" }
+        %iframe{ allowfullscreen: "", frameborder: "0", marginheight: "0", marginwidth: "0", mozallowfullscreen: "", scrolling: "no", webkitallowfullscreen: "", src: "//www.youtube.com/embed/6QOQGZTnTeo" }
         %br
 
   .row.blue-title
