change phone number

--- a/app/views/spree/shared/_footer.haml
+++ b/app/views/spree/shared/_footer.haml
@@ -5,9 +5,9 @@
       %br
       %br
       .phone
-        = link_to 'T: +31 (0)541 712 468', 'callto:0541712468', title: 'feiyue solar phone'
+        = link_to 'T: +31 (0)541 820 992', 'callto:+31541712468', title: 'feiyue solar phone'
         %br
-        = link_to 'F: +31 (0)541 570 211', 'callto:0541570211', title: 'feiyue solar phone'
+        = link_to 'F: +31 (0)541 570 211', 'callto:+31541570211', title: 'feiyue solar phone'
       %br
       .email
         = mail_to 'info@feiyuesolar.nl', 'E: info@feiyuesolar.nl'
