--- a/app/views/spree/home/index.haml
+++ b/app/views/spree/home/index.haml
@@ -15,8 +15,10 @@
     .info-text.nine.columns
       %h4= t('home.index.item2.content_html')
     .seven.columns
-      .border-radius8.embed-container
-        %iframe{ allowfullscreen: "", frameborder: "0", marginheight: "0", marginwidth: "0", mozallowfullscreen: "", scrolling: "no", webkitallowfullscreen: "", src: "//www.youtube.com/embed/6QOQGZTnTeo" }
+      = link_to '#', id: 'playYT' do
+        = image_tag 'movie.png', class: 'responsive-img'
+      .border-radius8.embed-container.hidden
+        %iframe{ allowfullscreen: "", frameborder: "0", marginheight: "0", marginwidth: "0", mozallowfullscreen: "", scrolling: "no", webkitallowfullscreen: "", src: "//www.youtube.com/embed/6QOQGZTnTeo?autoplay=1" }
         %br
 
   .row.blue-title
