fontawesome via CDN

--- a/app/views/spree/shared/_head.haml
+++ b/app/views/spree/shared/_head.haml
@@ -6,6 +6,7 @@
 = canonical_tag
 = favicon_link_tag '/favicon.ico'
 = stylesheet_link_tag 'application', media: 'screen'
+= stylesheet_link_tag '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'
 = csrf_meta_tags
 = javascript_include_tag 'application'
 = stylesheet_link_tag "//code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css"
