--- a/app/views/spree/shared/_head.haml
+++ b/app/views/spree/shared/_head.haml
@@ -14,4 +14,5 @@
 /[if lt IE 9]
   %script{ src: "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js" }
 = render "spree/shared/routes"
+= zopim_chat
 = yield :head
