profit page text change

--- a/app/views/spree/home/profit.haml
+++ b/app/views/spree/home/profit.haml
@@ -26,6 +26,9 @@
         = t('years')
         .plus_years
         #slider-years
+    .row
+      .columns.nine
+        %small.center= t('profits.note')
 
   .columns.four
     .product-section-title= t('total')
