add ups text to about page

--- a/app/views/spree/contacts/new.haml
+++ b/app/views/spree/contacts/new.haml
@@ -36,7 +36,7 @@
           door de realisatie van meer dan 5.000 zonne-installaties in Denemarken, Zweden en  Nederland binnen 2 jaar.
         %li
           Zonnepanelen met
-          %strong.orange25 jaar verzekerde garantie
+          %strong.orange 25 jaar verzekerde garantie
           op rendement met zonne-energie.
         %li
           Onze producten zijn van een
@@ -48,6 +48,8 @@
           %strong.orange maatschappelijk verantwoorde winstgevende investering
           met een
           %strong.orange terugverdientijd vanaf 5 jaar.
+
+      %small * is verplicht voor een reactie
 
   .row
     %h3
