validate presence of question in contact

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -8,6 +8,10 @@
 .pull-left { float: left; }
 .center { text-align: center; }
 
+span.field_with_errors {
+  textarea { border: solid $c_red; }
+}
+
 .embed-container {
   position: relative;
   padding-bottom: 56.25%; /* 16/9 ratio */
