change text on views

--- a/app/views/spree/home/profit.haml
+++ b/app/views/spree/home/profit.haml
@@ -28,7 +28,7 @@
         #slider-years
     .row
       .columns.nine
-        %small.center= t('profits.note')
+        .center= t('profits.note')
 
   .columns.four
     .product-section-title= t('total')
