--- a/app/views/spree/home/about.haml
+++ b/app/views/spree/home/about.haml
@@ -17,24 +17,26 @@
 
   .columns.ten
     %ul
-      %strong.orange Ervaring
-      en
-      %strong.orange inkoopvoordeel
-      door de realisatie van meer dan 5.000 zonne-installaties in Denemarken, Zweden en  Nederland binnen 2 jaar.
+      %li
+        %strong.orange Ervaring
+        en
+        %strong.orange inkoopvoordeel
+        door de realisatie van meer dan 5.000 zonne-installaties in Denemarken, Zweden en  Nederland binnen 2 jaar.
+      %li
+        Zonnepanelen met
+        %strong.orange 25 jaar verzekerde garantie
+        op rendement met zonne-energie.
+      %li
+        Onze producten zijn van een
+        %strong.orange goede kwaliteit
+        en zijn veelal als best getest door het Duitse onafhankelijke
+        %strong.orange Photon Laboratory.
+      %li
+        Uw
+        %strong.orange maatschappelijk verantwoorde winstgevende investering
+        met een
+        %strong.orange terugverdientijd vanaf 5 jaar.
       %br
-      Zonnepanelen met
-      %strong.orange 25 jaar verzekerde garantie
-      op rendement met zonne-energie. Onze producten zijn van een
-      %strong.orange goede kwaliteit
-      en zijn veelal als best getest door het Duitse onafhankelijke
-      %strong.orange Photon Laboratory.
-      %br
-      Uw
-      %strong.orange maatschappelijk verantwoorde winstgevende investering
-      met een
-      %strong.orange terugverdientijd vanaf 5 jaar.
-      %br
-      %small * is verplicht voor een reactie
       .pull-right= link_to "Zie ook onze referenties.", posts_path
 
     %h3#over= t('about')
