add google webmaster verify code

--- a/app/views/spree/shared/_head.haml
+++ b/app/views/spree/shared/_head.haml
@@ -15,4 +15,5 @@
   %script{ src: "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js" }
 = render "spree/shared/routes"
 = zopim_chat
+%meta{ name: 'google-site-verification', content: 'IqiCnZekFRKSDjKMTtc-YfgVASAyKpEA7wLExxjuX44' }
 = yield :head
