show feiyue movie after 1 second

--- a/app/views/spree/home/index.haml
+++ b/app/views/spree/home/index.haml
@@ -16,7 +16,7 @@
       %h4= t('home.index.item2.content_html')
     .seven.columns
       = link_to '#', id: 'loadYT' do
-        = image_tag 'movie.png', class: 'responsive-img'
+        = image_tag 'movie.png', class: 'responsive-img', id: 'feiyue_movie'
       .border-radius8.embed-container.hidden
         #movie
         %br
