--- a/app/views/spree/contacts/new.haml
+++ b/app/views/spree/contacts/new.haml
@@ -23,6 +23,10 @@
         = f.label :address, t('address')
         %br
         = f.text_field :address, class: 'required', placeholder: "Enschedesestraat 6A 7575 AB Oldenzaal"
+      %p
+        = f.label :question, t('contact.your_question')
+        %br
+        = f.text_area :question, rows: 2, cols: 23
 
     .columns.eight
       = image_tag "zon-feiyue-410.jpg", class: "responsive-img"
@@ -112,4 +116,3 @@
     .center= t('contact.note')
   .row
     .center= f.submit t('contact.submit'), id: 'contact_submit', title: t('contact.submit')
-
