edit content on about page

--- a/app/views/spree/shared/_main_nav_bar.haml
+++ b/app/views/spree/shared/_main_nav_bar.haml
@@ -3,7 +3,7 @@
     %li#home-link{ data: { hook: true } }= link_to Spree.t(:home), spree.root_path
     %li.hover-dropdown
       = link_to about_path do
-        = t(:about)
+        = t(:about_menu)
         %span.arrow-down
       %ul.hover-dropdown-menu
         %li= link_to t(:energy_saving), energy_saving_path
