--- a/app/views/spree/home/about.haml
+++ b/app/views/spree/home/about.haml
@@ -14,6 +14,8 @@
         %a{href: "#adviseur"}= t('about_page.consultant.title')
       %li
         %a{href: "#standaard"}= t('about_page.standard.title')
+      %li
+        %a{href: '/Zonis-FeiyueSolar-Algemene-Voorwaarden.pdf'} Algemene Voorwaarden
 
   .columns.ten
     %ul
