remove zonis, zon= text

--- a/app/views/spree/contacts/new.haml
+++ b/app/views/spree/contacts/new.haml
@@ -29,7 +29,7 @@
         = f.text_area :question, rows: 2, cols: 23
 
     .columns.eight
-      = image_tag "zon-feiyue-410.jpg", class: "responsive-img"
+      = image_tag "store/logo.png", class: "responsive-img"
       %ul#zone-list
         %li
           %strong.orange Ervaring
