--- a/app/views/spree/shared/_footer.haml
+++ b/app/views/spree/shared/_footer.haml
@@ -18,14 +18,16 @@
 
     .four.columns
       %h5= t(:find_us)
+
       %p
         Feiyue Solar B.V.
         %br
-        Enschedesestraat 6A
+        Nijverheidsstraat 46
         %br
-        7575 AB Oldenzaal
+        7575 BJ Oldenzaal
         %br
-        %a{ title: 'google map', href: 'https://maps.google.nl/maps?q=Enschedesestraat+6A++7575+AB+Oldenzaal&hl=nl&ll=52.304267,6.931295&spn=0.002139,0.005681&sll=52.469397,5.509644&sspn=2.181914,5.817261&hnear=Enschedesestraat+6,+7575+AB+Oldenzaal,+Overijssel&t=m&z=18' }= image_tag 'map.png', alt: 'Feiyue Solar Map'
+        %a{ title: 'google map', href: 'https://www.google.nl/maps/place/Nijverheidsstraat+46,+Het+Hazewinkel,+7575+BK+Oldenzaal/@52.2941024,6.9254388,18z/data=!4m2!3m1!1s0x47b8172380737c05:0xfc4f86f9ec0b4034?hl=nl' }
+          = image_tag 'map.png', alt: 'Feiyue Solar Map'
 
     .four.columns
       %h5= t(:on_page)
